# VideoCompositing

./: .gitignore  CMakeLists.txt  CleanUpAfterCrash.sh  README.md  RecompileAndRunFinish.sh  compositVideo.sh  compressVideos.sh  config.txt  cppDemo.cpp  finishVideos.sh  getCalibrationMats.sh  recompileAndRun.sh
Demos/: CMakeLists.txt  cppDemo.cpp  pythonDemo1.py
Version2/: CMakeLists.txt  README.md  RUN_ME_AFTER_PROGRAM_CRASHES.sh  compositVideo.sh  config.txt  videoAudioCollector.sh  videoAudioCompositer.sh  videoCompositer.cpp
Version4/: CMakeLists.txt  RUN_ME_AFTER_PROGRAM_CRASHES.sh  compositVideo.sh  config.txt  dewarpVideo.cpp  dewarpVideo.h  finishVideos.sh  videoCompositer.cpp
Version5/: CMakeLists.txt  README.md  RUN_ME_AFTER_PROGRAM_CRASHES.sh  compositVideo.sh  config.txt  correctDistortion.cpp  dewarpImage.cpp  dewarpVideo.cpp  dewarpVideo.h  finishVideos.sh  run.sh  videoCompositer.cpp
src/: compressRaw.cpp  correctDistortion.cpp  dewarpVideo.cpp  dewarpVideo.h  getCalibrationMats.cpp  videoCompositer.cpp  videoParams.h
